Left align first col in waiting times tooltip

--- a/resources/sass/pages/_resultsPage.scss
+++ b/resources/sass/pages/_resultsPage.scss
@@ -296,6 +296,7 @@
         .hospital-image {
             width: $hospital-image-width;
             @include aspect-ratio(134px, 123px);
+            background-size: cover;
         }
 
         @include media-breakpoint-up(lg) {
