Add in carousel indicators

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -170,6 +170,7 @@ $carousel-control-opacity: 1;
 $carousel-control-width: auto;
 $carousel-control-opacity: 1;
 $carousel-control-hover-opacity: 1;
+$carousel-indicator-active-bg: $brand-primary-1;
 
 // Pagination
 $pagination-link-height: 35px;
