--- a/resources/sass/_global.scss
+++ b/resources/sass/_global.scss
@@ -90,7 +90,7 @@ body {
         .main-menu {
             overflow-y: scroll;
             overflow-x: hidden;
-            height: calc(100vh - $mobile-header-height);
+            height: calc(100vh - #{$mobile-header-height});
         }
     }
 }
@@ -824,4 +824,18 @@ h6 {
 
 .section-space {
     padding: 75px 0 !important;
+}
+
+// Carousel indicators
+.carousel-indicators li {
+    width: 10px;
+    height: 10px;
+    border-radius: 100%;
+
+    &:not(.active) {
+        background-color: grey;
+    }
+}
+.carousel-indicators {
+    //bottom: -50px;
 }
