--- a/resources/sass/pages/_aboutUs.scss
+++ b/resources/sass/pages/_aboutUs.scss
@@ -22,6 +22,10 @@
         }
     }
 
+    .about-img {
+        margin-right: 50px;
+    }
+
     .about-dots {
         position: absolute;
         top: -30px;
