--- a/resources/sass/pages/_aboutUs.scss
+++ b/resources/sass/pages/_aboutUs.scss
@@ -51,7 +51,7 @@
     }
 
     // Swirl animation
-    .svg-wrapper {
+    .swirl.svg-wrapper {
         svg path {
             fill: none;
             stroke: $brand-primary-1;
