--- a/resources/sass/components/_banner.scss
+++ b/resources/sass/components/_banner.scss
@@ -143,7 +143,8 @@
     }
 }
 
-.treatment-parent {
+.treatment-parent,
+.radius-parent {
     .select-wrapper {
         svg {
             right: 20px;
