'Understand your available choices' - new icons

--- a/resources/sass/pages/_aboutUs.scss
+++ b/resources/sass/pages/_aboutUs.scss
@@ -18,6 +18,7 @@
     .understanding-choices {
         .icon-wrapper {
             width: 70px;
+            height: 70px;
             margin: 0 auto;
         }
     }
