Your rights - add light grey bg

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -48,6 +48,7 @@ $header-link-hover-colour: darken($brand-primary-1, 10%);
 $textGrey: #757575;
 $textDarkGrey: #1d1d1d;
 $bgGrey: #ECECEC;
+$bgLightGrey: #F7F7F7;
 
 // Snap design variables
 //Full width background grey: #ECECEC
