--- a/resources/sass/pages/_yourRights.scss
+++ b/resources/sass/pages/_yourRights.scss
@@ -21,7 +21,7 @@
 }
 
 .your-rights-what {
-    background-image: url('/images/banner-flipped.jpg');
+    //background-image: url('/images/banner-flipped.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     //@include mask($brand-primary-1, 0.06)
