--- a/resources/sass/components/basic/_button.scss
+++ b/resources/sass/components/basic/_button.scss
@@ -370,9 +370,10 @@
 .btn-back-to-top {
     color: $white;
     min-width: 182px;
-    border-radius: $btn-border-radius $btn-border-radius 0 0;
+    border-radius: $border-radius $border-radius 0 0;
     @include font-size(1.1rem);
-    @include gradient-animation($body-color, $body-color, $brand-primary-1, $brand-primary-1, 0.3s);
+    //@include gradient-animation($body-color, $body-color, $brand-primary-1, $brand-primary-1, 0.3s);
+    background-color: $body-color;
     padding: 19px 50px 19px 20px;
 
     svg {
