--- a/resources/sass/pages/pagesections/_howSection.scss
+++ b/resources/sass/pages/pagesections/_howSection.scss
@@ -24,6 +24,12 @@
             @include reset-row-spacing(8px);
         }
     }
+
+    @media (max-width: 991px) {
+        .carousel-item:not(.active) {
+            display: none;
+        }
+    }
 }
 
 .how-section__child {
