Mobile search form remove half-width select

--- a/resources/sass/_global.scss
+++ b/resources/sass/_global.scss
@@ -675,7 +675,7 @@ ol.alpha {
             top: 0;
             left: 0;
             color: $brand-primary-1;
-            @extend .font-semibold;
+            @extend .SofiaPro-Regular;
         }
     }
 }
