--- a/resources/sass/pages/pagesections/_howSection.scss
+++ b/resources/sass/pages/pagesections/_howSection.scss
@@ -25,7 +25,7 @@
         }
     }
 
-    @media (max-width: 991px) {
+    @include media-breakpoint-down(md) {
         .carousel-item:not(.active) {
             display: none;
         }
