--- a/resources/sass/pages/_resultsPage.scss
+++ b/resources/sass/pages/_resultsPage.scss
@@ -297,6 +297,7 @@
             width: $hospital-image-width;
             @include aspect-ratio(134px, 123px);
             background-size: cover;
+            background-position: center bottom;
         }
 
         @include media-breakpoint-up(lg) {
