--- a/resources/sass/_global.scss
+++ b/resources/sass/_global.scss
@@ -540,16 +540,16 @@ path {
         background-image: url('/images/icons/icon-tick.svg');
         @include icon-bg-center(100%);
         position: absolute;
-        top: $green-tick-size * 0.4;
+        top: -3px !important;
         left: 0;
-        width: $green-tick-size;
-        height: $green-tick-size;
+        width: 12px;
+        height: 12px;
     }
 }
 
 .tick-with-title {
     padding-left: 0 !important;
-    @include font-size(16);
+    @include font-size(1.1rem);
     color: #000;
     @extend .SofiaPro-Medium;
 
@@ -704,7 +704,7 @@ h2 {
 
 .section-title {
     @include font-size(1.8rem);
-    margin-bottom: 25px;
+    margin-bottom: 10px;
     font-weight: 500;
 }
 
@@ -819,7 +819,12 @@ h6 {
         width: 100%;
         transform: none;
     }
+}
 
+.home-page {
+    #submit_search {
+        padding: 17px 36px;
+    }
 }
 
 .modal-mobile-search {
@@ -848,5 +853,15 @@ h6 {
     }
 }
 .carousel-indicators {
-    //bottom: -50px;
+    position: absolute;
+    right: 0;
+    bottom: -30px !important;
+    left: 0;
+    display: flex;
+    justify-content: center;
+    padding-left: 0;
+    margin-right: auto;
+    margin-left: auto;
+    list-style: none;
+    z-index: 99;
 }
