How to use page css changes

--- a/resources/sass/pages/pagesections/_howSection.scss
+++ b/resources/sass/pages/pagesections/_howSection.scss
@@ -81,7 +81,7 @@
 
     background-color: #fff;
     padding: 1rem;
-    border: $greyBorder;
+    border: 1px solid #d4d4d4;
     border-radius: $border-radius;
     width: 100% !important;
 
