--- a/resources/sass/components/_accordion.scss
+++ b/resources/sass/components/_accordion.scss
@@ -100,6 +100,10 @@
                 @include font-size(1rem);
                 line-height: 1.6;
                 color: $textGrey !important;
+
+                &:last-child {
+                    margin-bottom: 0 !important;
+                }
             }
         }
     }
