Blog item page CSS tweaks

--- a/resources/sass/_global.scss
+++ b/resources/sass/_global.scss
@@ -619,6 +619,10 @@ path {
     padding-bottom: 75px;
 }
 
+.mb-15 {
+    margin-bottom: 15px !important;
+}
+
 .mb-25 {
     margin-bottom: 25px !important;
 }
