--- a/resources/sass/layout/_blog.scss
+++ b/resources/sass/layout/_blog.scss
@@ -138,26 +138,27 @@
     }
 
     .jumbotron {
+        display: none;
         @include aspect-ratio(1206, 728);
-        @extend .mb-5;
+        margin-bottom: 4rem;
         background-position: left;
         background-repeat: no-repeat;
         background-size: cover;
 
-
         .blog-item-category {
-            padding: 12px 16px 15px 38px;
+            padding: 12px 16px 12px 38px;
             top: 20px;
             left: 20px;
 
             svg {
-                @include v-c;
+                position: absolute;
+                top: 48%;
+                transform: translateY(-48%);
                 left: 17px;
                 width: 10px;
                 height: 10px;
             }
         }
-
 
         .btn-blog-back {
             position: absolute;
@@ -225,6 +226,17 @@
 
     .latest-blog-description {
         @extend .font-16;
+
+        p {
+            color: $brand-tertiary-1 !important;
+            @include font-size(1rem);
+            line-height: 1.4;
+            margin-bottom: 20px !important;
+        }
+    }
+
+    .latest-blog-title {
+        @include font-size(1.2rem);
     }
 }
 
