How section more info link spacing

--- a/resources/sass/pages/pagesections/_howSection.scss
+++ b/resources/sass/pages/pagesections/_howSection.scss
@@ -65,6 +65,10 @@
         @include font-size(1.2rem);
         margin-bottom: 15px;
     }
+
+    .help-link {
+        margin-left: 5px;
+    }
 }
 
 //============================ END HOW SECTION=============================
