--- a/resources/sass/pages/_aboutUs.scss
+++ b/resources/sass/pages/_aboutUs.scss
@@ -6,12 +6,17 @@
     .feature-box {
         padding: 4rem 2rem !important;
         display: flex;
-        flex-direction: column;
+        align-items: center;
         height: 100%;
 
         @include media-breakpoint-down(sm) {
             margin-bottom: 20px;
             height: auto !important;
+        }
+
+        p {
+            margin-bottom: 0;
+            @include font-size(18);
         }
     }
 
