Add font colour classes to CQC rating text

--- a/resources/sass/_global.scss
+++ b/resources/sass/_global.scss
@@ -409,6 +409,23 @@ select.big {
     color: $caretBlack;
 }
 
+.col-outstanding {
+    //background: $goldStar;
+    color: $cqcGreen;
+}
+
+.col-good {
+    color: $cqcGreen;
+}
+
+.col-requires-improvement {
+    color: $cqcAmber;
+}
+
+.col-inadequate {
+    color: $cqcRed;
+}
+
 // In text links
 
 .text-link {
