--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -35,6 +35,7 @@
 //PAGES
 @import 'pages/homePage';
 @import 'pages/resultsPage';
+@import 'pages/snapResultsPage';
 @import 'pages/faqsPage';
 @import 'pages/yourRights';
 @import 'pages/aboutUs';
